--- a/Веб-программирование/2020.5.РИ-3800ХХ.md
+++ b/Веб-программирование/2020.5.РИ-3800ХХ.md
@@ -1,6 +1,9 @@
-- Пузанов Игорь Михайлович
+ Пузанов Игорь Михайлович
   - Практика 1 (HTTP): https://gist.github.com/uralbash/b13091286140353e1fcb41f302b82a40
   - Практика 2 (HTTPS):
   - Практика 3 (WebSocket):
   - Практика 4 (БД):
   - Тема ИР: 
+  
+  
+- Борисова Варвара  
